<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment4">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fragment4"
        android:textColor="?attr/colorAccent"
        android:textSize="24sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et"
            android:hint="@string/enter_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_act2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button6_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_frag3" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>
