<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BlankFragment2">

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/fragment2"
        android:textColor="?attr/colorAccent"
        android:textSize="24sp" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/to_act2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button2_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/arrow_back" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</FrameLayout>
